// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuthForm should bypass reconnect button when updating an account 1`] = `<div />`;

exports[`OAuthForm should handle oauth cancelation 1`] = `
<div>
  <div
    class="styles__Infos___2ZZVs styles__Infos--danger___3wKYc u-mb-1"
  >
    <div
      class="styles__Stack--m___1tSpV"
    >
      <div
        class="styles__Infos-description___7P1NP"
      >
        <div
          class="styles__Stack--xs___2R5lW"
        >
          <h6
            class="MuiTypography-root u-error MuiTypography-h6 MuiTypography-gutterBottom"
          >
            Canceled
          </h6>
          <div
            class="MuiTypography-root MuiTypography-body1"
          >
            <span
              class="u-db u-mv-0"
            >
              We could not add your bank since you canceled the connection. Click "Add your bank" one more time to try again.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-busy="true"
    aria-disabled="true"
    class="styles__c-btn___-2Vnj styles__c-btn--full___2VmR1 styles__c-btn--center___16_Xh u-mt-1"
    disabled=""
    type="submit"
  >
    <span>
      <span>
        oauth.connect.label
      </span>
      <svg
        aria-busy="true"
        aria-hidden="true"
        class="u-ml-half styles__icon___23x3R styles__icon--spin___ybfC1"
        focusable="false"
        height="16"
        role="progressbar"
        viewBox="0 0 32 32"
        width="16"
      >
        <path
          d="M16 0a16 16 0 000 32 16 16 0 000-32m0 4a12 12 0 010 24 12 12 0 010-24"
          opacity="0.25"
        />
        <path
          d="M16 0a16 16 0 0116 16h-4A12 12 0 0016 4z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`OAuthForm should handle oauth cancelation 2`] = `
<div>
  <div
    class="styles__Infos___2ZZVs styles__Infos--danger___3wKYc u-mb-1"
  >
    <div
      class="styles__Stack--m___1tSpV"
    >
      <div
        class="styles__Infos-description___7P1NP"
      >
        <div
          class="styles__Stack--xs___2R5lW"
        >
          <h6
            class="MuiTypography-root u-error MuiTypography-h6 MuiTypography-gutterBottom"
          >
            Canceled
          </h6>
          <div
            class="MuiTypography-root MuiTypography-body1"
          >
            <span
              class="u-db u-mv-0"
            >
              We could not add your bank since you canceled the connection. Click "Add your bank" one more time to try again.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="styles__c-btn___-2Vnj styles__c-btn--full___2VmR1 styles__c-btn--center___16_Xh u-mt-1"
    type="submit"
  >
    <span>
      <span>
        oauth.connect.label
      </span>
    </span>
  </button>
</div>
`;

exports[`OAuthForm should render 1`] = `
<div>
  <button
    class="styles__c-btn___-2Vnj styles__c-btn--full___2VmR1 styles__c-btn--center___16_Xh u-mt-1"
    type="submit"
  >
    <span>
      <span>
        oauth.connect.label
      </span>
    </span>
  </button>
</div>
`;
